--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,12 @@ textarea:not([rows]) {
   margin: 0;
 }
 
+.faq__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
 .faq__item + .faq__item {
   border-top: 1px solid var(--Purple-100);
 }
